--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 git2 = "0.20.2"
 clap = { version = "4.5.32", features = ["derive"] }
+thread = "0.0.1"
